DS-515 fix .c-block__title on mobile

--- a/app/styles/_library/_objects.blocks.scss
+++ b/app/styles/_library/_objects.blocks.scss
@@ -24,10 +24,7 @@
   background-color: $c-tertiary;
 }
 .c-block__title {
-  @include typeface(header, 8);
-  @include media(">=medium") {
-    @include typeface(header, 10);
-  }
+  @include typeface(header, 10);
 }
 .c-block__title a {
   color: $c-black;
